# wolt-israel-ha-component

./: .gitignore  CHANGELOG.md  Makefile  README.md  hacs.json  opencode.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/scripts/: logs-ha.sh  post-create.sh  restart-ha.sh  start-ha.sh
.github/: cliff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: hacs.yml  release.yml  tests.yml
config/: configuration.yaml
custom_components/wolt/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/wolt/translations/: en.json  he.json
tests/: __init__.py
tests/components/wolt/: conftest.py  test_api.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_init.py  test_sensor.py
